Fixes footer alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ $accent: #5F49AE;
 
 @media (min-width: 960px) {
   .header {
-      min-height: calc(100vh - 167px);
+      min-height: calc(100vh - 107px);
   }
 }
 
